# technically-a-synth

./: .gitmodules  Cargo.toml  README.md
dsp/src/: biquad.rs  envelope.rs  lib.rs
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/src/: lib.rs  main.rs
embedded/tests/: integration.rs
src/: lib.rs  main.rs
technically_a_synth_vst/: Cargo.toml
technically_a_synth_vst/src/: lib.rs
vst/: Cargo.toml  README.md  bundler.toml
vst/src/: lib.rs
