[package]
authors = ["Greg Shiner <greg@gregshiner.com>"]
name = "embedded"
edition = "2024"
version = "0.1.0"


# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
[[bin]]
name = "embedded"
test = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
dsp = { path = "../dsp" }
dasp = { version = "0.11.0", default-features = false, features = ["signal"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32h755zi-cm7", "unstable-pac"] }
embassy-usb = "0.6.0"
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }
fugit = { version = "0.3.9", features = ["defmt"] }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
